[build-system]
requires = ["setuptools>=69", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yoga-layout-python"
dynamic = ["version"]
description = "Pure Python port of Meta Yoga layout engine"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Meta Platforms, Inc. and affiliates."}
]
maintainers = [
  {name = "Quantmew Contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "Cython>=3.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]
build = [
  "Cython>=3.0",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/quantmew/yoga-layout-python"
Repository = "https://github.com/quantmew/yoga-layout-python"
Documentation = "https://yogalayout.dev/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "yoga.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120  # Relaxed line length for complex type hints and ported code
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "N",      # Ignore pep8-naming for C API bindings compatibility
    "E501",   # Ignore line-length for ported code
    "SIM102", # Ignore nested if statements (common in layout logic)
    "F403",   # Allow * imports in __init__.py files
    "F405",   # Allow names that may be undefined from * imports
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F405"]
"tests/**/*.py" = ["F403", "F405"]
"tools/**/*.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ['yoga-layout/enums\.py$']
